# motor-cortex-eprop

./: .gitignore  README.md  environment.yml  motor_controller_eprop_tutorial.ipynb  motor_controller_eprop_tutorial_spike_input.ipynb  pyproject.toml  sweep_delay.py
dataset_motor_training/stage1/: checking_data.ipynb
eprop-motor-control/: M1MotorCortexEprop.py  environment.yml  eprop_reaching_task.py  plot_results.py  run_scan.sh  run_single_task.sh  trained_weights_net.py
eprop-motor-control/config/: config.yaml
eprop-motor-control/parameter_scan_results/: scan_summary_rbneuron_plasticinput_buffersize50.csv
experiments/legacy_sequence/: legacy_like_1500_timephases.yaml  run_sequence_timing_experiment.py
motor_controller_model/: M1MotorCortexEprop.py  README.md  analyse_scan_results.py  config_schema.py  environment.yml  eprop_network_dale-law-not-applied.py  eprop_reaching_task.py  m1_factory.py  m1_network.py  m1_training.py  plot_results.py  run_m1.py  signals.py  trained_weights_net.py  utils.py
motor_controller_model/config/: config.yaml
motor_controller_model/dataset_motor_training/: README.md  encoding_trajectory.ipynb
motor_controller_model/nestml_neurons/: README.md  compile_nestml_neurons.py  controller_module.nestml
outdated/: eprop_reaching_task.py  motor_controller_eprop_tutorial.ipynb
outdated/parameter_scan_results/: parameter_scan_analysis.ipynb
parameter_scan_results/: scan_summary_manualRBF_noplasticinput.csv  scan_summary_manualRBF_plasticinput.csv  scan_summary_rbneuron_noplasticinput_buffersize10.csv  scan_summary_rbneuron_noplasticinput_buffersize25.csv  scan_summary_rbneuron_noplasticinput_buffersize50.csv
results/: config.yaml  trained_weights.npz  training_loss.npy
scripts/: run_eprop_net.sh  run_scan.sh  run_single_task.sh
tests/: test_config_schema.py  test_imports.py
tutorial_results/: config.json  trained_weights.npz
(+12 files in other folders)
