[project]
name = "motor_controller_model"
version = "0.1.0"
description = "Motor controller model package"
authors = [
    { name = "Renan O. Shimoura" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=2.3.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "pyyaml>=6.0.2",
    "nestml>=8.0.1",
    "h5py",
    "statsmodels",
    "pygsl",
    "odetoolbox",
    "pytest"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["motor_controller_model*"]
