[project]
name = "motor_controller_model"
version = "0.1.0"
description = "Motor controller model package"
authors = [
    { name = "Renan O. Shimoura" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "seaborn",
    "pandas",
    "pyyaml",
    "pydantic>=2.0",
    "h5py",
    "statsmodels",
    "nestml",
    "odetoolbox",
    "structlog",
    "minjerk-dynamics @ git+https://github.com/pollomarzo/controller.git@m1-delay#subdirectory=complete_control/shared/minjerk"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["motor_controller_model*"]
